Add environment configuration and improve logging in stock management features
- Created a new .env.example file with environment variables for backend configuration.
- Added logging statements in StockController and related use cases for better debugging.
- Updated InsertProductToStock function to include suggested and normal prices.
- Adjusted error handling in OurPlans component to log detailed error messages.
- Refactored various components to remove unnecessary console logs and improve code clarity.

--- a/revendaja/eas.json
+++ b/revendaja/eas.json
@@ -10,7 +10,7 @@
         "buildType": "apk"
       },
       "env": {
-        "EXPO_PUBLIC_BACKEND_DEV": "https://revendaja-backend.onrender.com"
+        "EXPO_PUBLIC_BACKEND_DEV": "http://192.168.100.153:9999"
       }
     },
     "preview": {
@@ -19,7 +19,7 @@
         "buildType": "apk"
       },
       "env": {
-        "EXPO_PUBLIC_BACKEND_DEV": "https://revendaja-backend.onrender.com"
+        "EXPO_PUBLIC_BACKEND_DEV": "http://192.168.100.153:9999"
       }
     },
     "production": {
@@ -27,7 +27,7 @@
         "buildType": "apk"
       },
       "env": {
-        "EXPO_PUBLIC_BACKEND_DEV": "https://revendaja-backend.onrender.com"
+        "EXPO_PUBLIC_BACKEND_DEV": "http://192.168.100.153:9999"
       }
     }
   },
