--- a/revendaja/package.json
+++ b/revendaja/package.json
@@ -28,6 +28,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
+    "@react-navigation/material-top-tabs": "^7.2.10",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/stack": "^7.0.0",
     "@shopify/react-native-skia": "^1.10.2",
@@ -54,7 +55,7 @@
     "react-native": "0.76.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-pager-view": "^6.7.0",
+    "react-native-pager-view": "^6.5.1",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-svg": "^15.8.0",
