--- a/revendaja/eas.json
+++ b/revendaja/eas.json
@@ -10,7 +10,7 @@
         "buildType": "apk"
       },
       "env": {
-        "EXPO_PUBLIC_BACKEND_DEV": "http://192.168.100.153:9999"
+        "EXPO_PUBLIC_BACKEND_DEV": "https://api-revendaja.onrender.com"
       }
     },
     "preview": {
@@ -19,7 +19,7 @@
         "buildType": "apk"
       },
       "env": {
-        "EXPO_PUBLIC_BACKEND_DEV": "http://192.168.100.153:9999"
+        "EXPO_PUBLIC_BACKEND_DEV": "https://api-revendaja.onrender.com"
       }
     },
     "production": {
@@ -27,7 +27,7 @@
         "buildType": "apk"
       },
       "env": {
-        "EXPO_PUBLIC_BACKEND_DEV": "http://192.168.100.153:9999"
+        "EXPO_PUBLIC_BACKEND_DEV": "https://api-revendaja.onrender.com"
       }
     }
   },
