--- a/revendaja/package.json
+++ b/revendaja/package.json
@@ -7,8 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "postinstall": "patch-package",
-    "preinstall": "rm -rf patches",
+    "postinstall": "patch-package npx expo-doctor || true",
+    "preinstall": "rm -rf patches ",
     "eas-build-pre-install": "rm -rf patches",
     "eas-build-post-install": "rm -rf patches"
   },
@@ -25,40 +25,41 @@
     "@gorhom/bottom-sheet": "^5.0.5",
     "@hookform/resolvers": "^3.9.1",
     "@legendapp/motion": "^2.4.0",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-picker/picker": "2.9.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-picker/picker": "2.11.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/material-top-tabs": "^7.2.10",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/stack": "^7.0.0",
-    "@shopify/react-native-skia": "^1.10.2",
-    "@stripe/stripe-react-native": "0.38.6",
+    "@shopify/react-native-skia": "v2.0.0-next.2",
+    "@stripe/stripe-react-native": "0.45.0",
     "@tanstack/react-query": "^5.59.20",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
-    "expo": "~52.0.14",
-    "expo-blur": "~14.0.3",
-    "expo-camera": "~16.0.9",
-    "expo-clipboard": "~7.0.1",
-    "expo-device": "^7.0.2",
-    "expo-image": "~2.0.3",
-    "expo-image-picker": "~16.0.4",
-    "expo-notifications": "~0.29.11",
-    "expo-splash-screen": "~0.29.21",
-    "expo-status-bar": "~2.0.0",
+    "expo": "^53.0.5",
+    "expo-blur": "~14.1.4",
+    "expo-camera": "~16.1.6",
+    "expo-clipboard": "~7.1.4",
+    "expo-device": "~7.1.4",
+    "expo-image": "~2.1.6",
+    "expo-image-picker": "~16.1.4",
+    "expo-notifications": "~0.31.1",
+    "expo-splash-screen": "~0.30.8",
+    "expo-status-bar": "~2.2.3",
     "jwt-decode": "^4.0.0",
-    "lottie-react-native": "7.1.0",
+    "lightningcss": "^1.29.3",
+    "lottie-react-native": "7.2.2",
     "nativewind": "^4.1.23",
-    "react": "18.3.1",
+    "react": "19.0.0",
     "react-hook-form": "^7.53.1",
-    "react-native": "0.76.3",
+    "react-native": "0.79.2",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-pager-view": "^6.5.1",
-    "react-native-reanimated": "^3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-svg": "^15.8.0",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-pager-view": "6.7.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-svg": "15.11.2",
     "react-native-tab-view": "^4.0.10",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
