fix: update contact email and add google services configuration

--- a/revendaja/app.json
+++ b/revendaja/app.json
@@ -23,7 +23,8 @@
       "permissions": ["NOTIFICATIONS", "CAMERA"],
       "adaptiveIcon": {
         "foregroundImage": "./assets/icon.png"
-      }
+      }, 
+      "googleServicesFile": "./google-services.json",
     },
 
     "web": {
