--- a/revendaja-backend/package.json
+++ b/revendaja-backend/package.json
@@ -8,6 +8,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "firebase-admin": "^13.3.0",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
