--- a/revendaja/app.json
+++ b/revendaja/app.json
@@ -24,7 +24,7 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/icon.png"
       }, 
-      "googleServicesFile": "./google-services.json",
+      "googleServicesFile": "./google-services.json"
     },
 
     "web": {
@@ -58,7 +58,7 @@
             "backgroundColor": "#000000"
           }
         }
-      ]
+      ],
     ],
 
     "notification": {
