--- a/revendaja/package.json
+++ b/revendaja/package.json
@@ -2,11 +2,22 @@
   "name": "revendaja",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
+  "private": true,
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(?:.pnpm/)?((jest-)?react-native|@react-native(-community)?|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg))"
+    ],
+    "setupFiles": [
+      "./jest.setup.js"
+    ]
+  },
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "test": "jest --watchAll",
     "postinstall": "patch-package npx expo-doctor || true",
     "preinstall": "rm -rf patches ",
     "eas-build-pre-install": "rm -rf patches",
@@ -34,6 +45,7 @@
     "@shopify/react-native-skia": "v2.0.0-next.2",
     "@stripe/stripe-react-native": "0.45.0",
     "@tanstack/react-query": "^5.59.20",
+    "@types/jest": "^29.5.14",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
@@ -47,6 +59,8 @@
     "expo-notifications": "~0.31.1",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
+    "jest": "~29.7.0",
+    "jest-expo": "~53.0.5",
     "jwt-decode": "^4.0.0",
     "lightningcss": "^1.29.3",
     "lottie-react-native": "7.2.2",
@@ -70,9 +84,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.2.0",
     "@types/react": "~18.3.12",
     "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "~5.3.3"
-  },
-  "private": true
+  }
 }
